Time: 24 ms (97.75%) | Memory: 50.9 MB (46.51%) - LeetSync